--- a/index.html
+++ b/index.html
@@ -10,7 +10,36 @@
 <body>
     <!-- Header -->
     <header>
-        div.nav container
+        <div class="nav container">
+            <a href="#" class="logo">Maxdev</a>
+            <!-- Navbar -->
+            <ul class="navbar">
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="#projects" class="nav-link">Projects</a></li>
+                <li><a href="#services" class="nav-link">Services</a></li>
+                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+            <div class="menu-icon">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </div>
     </header>
+    <!-- Home -->
+    <section class="home container" id="home">
+        <div class="home-content">
+            <div class="home-img">
+                
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <!-- Link JS -->
+    <script src="./js/main.js"></script>
 </body>
 </html>
