--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
     <section class="home container" id="home">
         <div class="home-content">
             <div class="home-img">
-                
+                <img src="./img/profile.png" alt="profile">
+                <div class="home-text">
+                    <h3>
+                        ¡Hello world!
+                    </h3>
+                    <h2>I'm <span class="color">Maximiliano</span></h2>
+                </div>
             </div>
         </div>
     </section>
