Portfolio sec finish

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                 <img src="img/profile.png" alt="">
             </div>
             <div class="home-text">
-                <h3>¡Hola!</h3>
+                <h3>¡Hola mundo! 
+                    <i class="fa-solid fa-code"></i>
+                </h3>
                 <h2>Soy <span class="color">Maximiliano</span></h2>
                 <p>
                     Soy estudiante de <span class="color">"Desarrollo web"</span> en Coderhouse y de la carrera de <span class="color">"Programación Web Full Stack" en Digitalhouse</span>.
@@ -65,7 +67,7 @@
             </div>
             <div class="about-text">
                 <p>¡Hola! Soy Maximiliano Frias. Desarrollador y diseñador web junior.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam illum atque omnis!</p>
+                <p>Tengo 19 años, disfruto mucho del aire libre y pasar el tiempo con amigos. Mi mayor objetivo es aumentar mi conocimiento en las diferentes tecnologías y convertirme en un <span class="color">Front end Developer.</span> </p>
             </div>
         </div>
     </section>
@@ -101,6 +103,37 @@
             </div>
         </div>
 
+    </section>
+    <!-- Portfolio -->
+    <section class="portfolio container" id="portfolio">
+        <!-- Heading -->
+        <h2 class="heading">Portfolio</h2>
+        <div class="portfolio-content">
+            <div class="portfolio-box">
+                <img src="./img/portfolio-1.jpg" alt="" class="portfolio-img">
+                <!-- Overlay -->
+                <div class="portfolio-overlay">
+                    <h2>Desarrollo Web</h2>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./img/portfolio-2.jpg" alt="" class="portfolio-img">
+                <!-- Overlay -->
+                <div class="portfolio-overlay">
+                    <h2>Diseño Web</h2>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./img/portfolio-3.webp" alt="" class="portfolio-img">
+                <!-- Overlay -->
+                <div class="portfolio-overlay">
+                    <h2>Mis proyectos</h2>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+        </div>
     </section>
 
 
