--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <h3>¡Hola mundo!
                     <i class="fa-solid fa-code"></i>
                 </h3>
-                <h2>Soy <span class="color">Maximiliano</span></h2>
+                <h2>Soy <span class="color">Maximiliano.</span></h2>
                 <p>
-                    Estudiante de <span class="color">"Desarrollo web"</span> en Coderhouse y me gustaria seguir la carrera de <span class="color">"Front end developer"</span>.
+                    Estudiante de <span class="color">"Desarrollo web"</span> en Coderhouse y mi sueño es convertirme en un <span class="color">"Front end developer"</span>.
                 </p>
                 <div class="social">
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -60,8 +60,8 @@
         <!-- About content -->
         <div class="about-content">
             <div class="about-data">
-                <span>Sobre mi</span>
-                <h2>Desarrollo Web<br></h2>
+                <span>Sobre mi.</span>
+                <h2>"Desarrollo Web"<br></h2>
                 <a href="./CV.pdf" class="btn" download="">
                     Descargar CV
                     <i class="fa-solid fa-download"></i>
@@ -69,8 +69,8 @@
             </div>
             <div class="about-text">
                 <p>¡Hola! Soy Maximiliano Frias. Desarrollador y diseñador web junior.</p>
-                <p>Tengo 19 años, disfruto mucho del aire libre y pasar el tiempo con amigos. Mi mayor objetivo es aumentar mi conocimiento en las diferentes tecnologías y convertirme en un <span class="color">Front end Developer.</span> <br>
-                Aun no he tenido la suerte de participar en un grupo de trabajo, ni en ningun proyecto importante, pero estoy muy interesado en hacerlo. En la sección "Portfolio" tenes disponibles algunos de mis proyectos personales<br>
+                <p>Tengo 19 años y empecé en el mundo del desarrollo hace 2 de manera autodidacta en bootcamps gratuitos como "Freecodecamp". Mi mayor objetivo es aumentar mi conocimiento en las diferentes tecnologías y convertirme en un <span class="color">Front end Developer.</span> <br>
+                Aun no he tenido la oportunidad de participar en un grupo de trabajo, ni en ningun proyecto importante, pero estoy muy interesado en hacerlo. En la sección "Portfolio" tenes disponibles algunos de mis proyectos personales<br>
                 <span class="color">Descarga mi cv si estas interesado :)</span></p> 
             </div>
         </div>
