--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <a href="#" class="logo">Maxdev</a>
             <!-- Navbar -->
             <ul class="navbar">
-                <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#projects" class="nav-link">Projects</a></li>
+                <li><a href="#" class="nav-link">Home</a></li>
+                <li><a href="#portfolio" class="nav-link">Projects</a></li>
                 <li><a href="#services" class="nav-link">Services</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -66,11 +66,27 @@
                     Descargar CV
                     <i class="fa-solid fa-download"></i>
                 </a>
+                <div class="certification-box">
+                    <div class="googleActivate">
+                        <img src="./img/googleActivate.jpg" alt="googleActivate">
+                        <h3>Google Activate</h3>
+                        <span class="color">
+                            "Desarrollo web: Html y css", "Desarrllo de app moviles" 
+                        </span>
+                    </div>
+                    <div class="coderHouse">
+                        <img src="./img/coderHouse.jpg" alt="coderHouse">
+                        <h3>Coderhouse</h3>
+                        <span class="color">
+                            "Desarrollo web", "Javascript", "React js"
+                        </span>
+                    </div>
+                </div>
             </div>
             <div class="about-text">
                 <p>¡Hola! Soy Maximiliano Frias. Desarrollador y diseñador web junior.</p>
-                <p>Tengo 19 años y empecé en el mundo del desarrollo hace 2 de manera autodidacta en bootcamps gratuitos como "Freecodecamp". Mi mayor objetivo es aumentar mi conocimiento en las diferentes tecnologías y convertirme en un <span class="color">Front end Developer.</span> <br>
-                Aun no he tenido la oportunidad de participar en un grupo de trabajo, ni en ningun proyecto importante, pero estoy muy interesado en hacerlo. En la sección "Portfolio" tenes disponibles algunos de mis proyectos personales<br>
+                <p>Tengo 19 años y empecé en el mundo del desarrollo hace 2 de manera autodidacta en bootcamps gratuitos como "Freecodecamp". <br>
+                Aun no he tenido la oportunidad de participar en un grupo de trabajo, ni en ningun proyecto importante, pero estoy muy interesado en hacerlo. En la sección "Portfolio" tenes disponibles algunos de mis proyectos personales.<br>
                 <span class="color">Descarga mi cv si estas interesado :)</span></p> 
             </div>
         </div>
@@ -98,7 +114,7 @@
                 <h2>
                     Diseño Web
                 </h2>
-                <p>También dispongo de herramientas que hacen que el diseño sea mucho más personalizado, balanceando entre un diseño funcional y agradable a la vista. Siempre siguiendo las necesidades del cliente.</p>
+                <p>Manejo de tecnologías como:</p>
                 <div class="dev-icons2">
                     <i class="fa-brands fa-figma"></i>
                     <i class="fa-brands fa-bootstrap"></i>
