--- a/index.html
+++ b/index.html
@@ -133,16 +133,18 @@
                 <img src="./img/portfolio-1.jpg" alt="" class="portfolio-img">
                 <!-- Overlay -->
                 <div class="portfolio-overlay">
-                    <h2>Desarrollo Web</h2>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                    <h2>Recreant Brand</h2>
+                    <a href="https://recreant-brand-web.000webhostapp.com/index.html"><i class="fa-solid fa-link"></i></a>
+                    <p>Ecommerce Simulado.</p>
                 </div>
             </div>
             <div class="portfolio-box">
                 <img src="./img/portfolio-2.jpg" alt="" class="portfolio-img">
                 <!-- Overlay -->
                 <div class="portfolio-overlay">
-                    <h2>Diseño Web</h2>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                    <h2>Studify</h2>
+                    <a href="https://studify.vercel.app"><i class="fa-solid fa-link"></i></a>
+                    <p>Reloj pomodoro para mejorar habitos de estudio.</p>
                 </div>
             </div>
             <div class="portfolio-box">
