--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="about-text">
-                <p>¡Hola! Soy Maximiliano Frias. Desarrollador y diseñador web junior.</p>
+                <p>¡Hola! Soy Maximiliano Frias. Desarrollador web junior.</p>
                 <p>Tengo 21 años y empecé en el mundo del desarrollo hace 5 de manera autodidacta en bootcamps gratuitos como "Freecodecamp". <br>
                 Aun no he tenido la oportunidad de participar en un grupo de trabajo, ni en ningun proyecto colaborativo, pero estoy muy interesado en hacerlo. En la sección "Portfolio" tenes disponibles algunos de mis proyectos personales más relevantes.<br>
                 <span class="color">PODES DESCARGAR MI CV HACIENDO CLICK EN "Descargar CV".</span></p> 
